# dexumi-visualizer

./: .gitignore  MODALITIES.md  README.md  pyproject.toml
docs/: AGENTS_README.md  DEXUMI_HAPTICAGUI_INTEGRATION.md  GENERALIZED_INGESTION_ARCHITECTURE.md  RERUN_GUIDE.md  RERUN_PLUGIN_BEST_PRACTICES.md  TACTILE_STANDARDIZATION.md  WEB_VIEWER_COLLABORATION.md
src/dexumi_visualizer/: cli.py  gui_integration.py  rerun_loader.py  zarr_parser.py
src/dexumi_visualizer/plugins/: __init__.py  base.py  hdf5_plugin.py  loader.py  registry.py  zarr_plugin.py
src/dexumi_visualizer/validation/: __init__.py  report.py  schema.py  validator.py
tests/: test_cli.py  test_gui_integration.py  test_plugin_validation.py  test_plugins.py  test_rerun_loader.py  test_zarr_parser.py
